fix: code background in dark mode

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -52,7 +52,7 @@
         --body-background: #1b1b1b;
         --card-background: #2e3235;
         --blockquote-background-color: #25282c;
-        --code-background-color: #2e3235;
+        --code-background-color: #1f2224;
         --pre-background-color: #1f2224;
         .chroma {
             background-color: #1f2224;
